--- a/web/index.css
+++ b/web/index.css
@@ -26,3 +26,13 @@ body {
   height: 80%;
   overflow-y: scroll;
 }
+
+#chat {
+  height: 100%;
+  width: 40%;
+}
+
+.container {
+  height: 100%;
+  display: flex;
+}
